# mesh

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mesh_service/: __init__.py  config.py  main.py  state.py
src/mesh_service/endpoints/: __init__.py  __router.py
src/mesh_service/endpoints/management/: __init__.py  __router.py  _health.py
src/mesh_service/endpoints/relay/: __init__.py  __router.py  _relay.py
src/mesh_service/endpoints/workers/: __init__.py  __router.py  _entrypoint.py  _get_workers.py
src/mesh_service/router/: __init__.py  _router.py  worker.py
src/mesh_service/router/handler/: __base.py  __init__.py  hello.py  ping.py  ready.py  response.py
src/mesh_service/utils/: headers.py  host.py  messages.py  methods.py  name.py  relay.py  url.py
src/mesh_service/views/: __init__.py  _worker_view.py
tests/: test_config.py  test_main.py  test_utils.py  test_worker_entrypoint.py
