[project]
name = "mesh"
version = "0.1.0"
description = "Standalone mesh relay service"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "pydantic>=2.12.0",
    "httpx>=0.28.1",
    "uvicorn>=0.44.0",
    "lange-python>=0.7.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mesh_service"]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "ty>=0.0.36",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
